@@ -1151,3 +1151,65 @@ Simple Ping to test if the server/device is available.
     return IPADDR, HOST, RPORT, PROTO, METHOD, DOMAIN, CONTACTDOMAIN, FROMNAME, FROMUSER, FROMDOMAIN, FROMTAG, TONAME, TOUSER, TODOMAIN, TOTAG, USER, PWD, DIGEST, BRANCH, CALLID, CSEQ, UA, LOCALIP, NUMBER, INTERVAL
 
 
+def get_wssend_args():
+    parser = argparse.ArgumentParser(
+        formatter_class=lambda prog: argparse.RawDescriptionHelpFormatter(
+            prog, max_help_position=50),
+        description= RED + u'''☎️  SIPPTS''' + WHITE + ''' BY ''' + GREEN + '''🅿 🅴 🅿 🅴 🅻 🆄 🆇''' + YELLOW + '''
+
+█████████████████████████████████████████████
+█▄─█▀▀▀█─▄█─▄▄▄▄███─▄▄▄▄█▄─▄▄─█▄─▀█▄─▄█▄─▄▄▀█
+██─█─█─█─██▄▄▄▄─███▄▄▄▄─██─▄█▀██─█▄▀─███─██─█
+▀▀▄▄▄▀▄▄▄▀▀▄▄▄▄▄▀▀▀▄▄▄▄▄▀▄▄▄▄▄▀▄▄▄▀▀▄▄▀▄▄▄▄▀▀
+
+''' + GREEN + '''💾 https://github.com/Pepelux/sippts''' + WHITE + '''
+''' + YELLOW + '''🐦 https://twitter.com/pepeluxx''' + WHITE + '''
+
+''' + BLUE + ''' -= Send a customized message =-''' + WHITE,
+        epilog=BWHITE + '''
+Send SIP messages over WebSockets.
+ 
+''')
+
+    # Add arguments
+    parser.add_argument('-i', '--ip', type=str, help='Target IP', dest="ipaddr", required=True)
+    parser.add_argument('-r', '--remote_port', type=str, help='Target port', dest='remote_port', required=True)
+    parser.add_argument('-path', type=str, help='WS path (Ex: /ws)', dest='path', default='')
+    parser.add_argument('-v', '--verbose', help='Increase verbosity', dest='verbose', action="count")
+    parser.add_argument('-p', '--proto', type=str, help='Protocol: udp|tcp|tls (default: udp)', dest='proto', default='WSS')
+    parser.add_argument('-m', '--method', type=str, help='SIP Method: options|invite|register|subscribe|cancel|bye|...', dest='method', default='OPTIONS')
+    parser.add_argument('-d', '--domain', type=str, help='SIP Domain or IP address. Ex: my.sipserver.com (default: target IP address)', dest='domain', default='')
+    parser.add_argument('-cd', '--contact_domain', type=str, help='Domain or IP address for Contact header. Ex: 10.0.1.2', dest='contact_domain', default='')
+    parser.add_argument('-fn', '--from_name', type=str, help='From Name. Ex: Bob', dest='from_name', default='')
+    parser.add_argument('-fu', '--from_user', type=str, help='From User (default: 100)', dest='from_user', default='100')
+    parser.add_argument('-fd', '--from_domain', type=str, help='From Domain. Ex: 10.0.0.1', dest='from_domain', default='')
+    parser.add_argument('-ft', '--from_tag', type=str, help='From Tag', dest='from_tag', default='')
+    parser.add_argument('-tn', '--to_name', type=str, help='To Name. Ex: Alice', dest='to_name', default='')
+    parser.add_argument('-tu', '--to_user', type=str, help='To User (default: 100)', dest='to_user', default='100')
+    parser.add_argument('-td', '--to_domain', type=str, help='To Domain. Ex: 10.0.0.1', dest='to_domain', default='')
+    parser.add_argument('-tt', '--to_tag', type=str, help='To Tag', dest='to_tag', default='')
+    parser.add_argument('-ua', '--user_agent', type=str, help='User-Agent header (default: pplsip)', dest='user_agent', default='pplsip')
+
+    # Array for all arguments passed to script
+    args = parser.parse_args()
+
+    IPADDR = args.ipaddr
+    PORT = args.remote_port
+    PATH = args.path
+    VERBOSE = args.verbose
+    PROTO = args.proto
+    METHOD = args.method
+    DOMAIN = args.domain
+    CONTACTDOMAIN = args.contact_domain
+    FROMNAME = args.from_name
+    FROMUSER = args.from_user
+    FROMDOMAIN = args.from_domain
+    FROMTAG = args.from_tag
+    TONAME = args.to_name
+    TOUSER = args.to_user
+    TOTAG = args.to_tag
+    TODOMAIN = args.to_domain
+    UA = args.user_agent
+
+    return IPADDR, PORT, PATH, VERBOSE, PROTO, METHOD, DOMAIN, CONTACTDOMAIN, FROMNAME, FROMUSER, FROMDOMAIN, FROMTAG, TONAME, TOUSER, TOTAG, TODOMAIN, UA
+
